// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for getAllProducts handler should return proper products 1`] = `
Object {
  "count": 4,
  "description": "Nice Product 1",
  "id": "9a14812c-07e1-463e-9fa1-1a5179f48e61",
  "price": 2,
  "title": "Nice Product 1",
}
`;

exports[`Unit test for getAllProducts handler should return proper products 2`] = `
Object {
  "count": 6,
  "description": "Nice Product 2",
  "id": "164032bb-6512-4d5b-aae8-313fc365f012",
  "price": 10,
  "title": "Nice Product 2",
}
`;

exports[`Unit test for getAllProducts handler should return proper products 3`] = `
Object {
  "count": 7,
  "description": "Nice Product 3",
  "id": "b3595014-634c-4b47-8250-cce3867d4919",
  "price": 23,
  "title": "Nice Product 3",
}
`;

exports[`Unit test for getAllProducts handler should return proper products 4`] = `
Object {
  "count": 12,
  "description": "Nice Product 4",
  "id": "504e5779-c1bc-4498-a792-3b12839b4a7d",
  "price": 15,
  "title": "Nice Product 4",
}
`;

exports[`Unit test for getAllProducts handler should return proper products 5`] = `
Object {
  "count": 7,
  "description": "Nice Product 5",
  "id": "e7a1919b-0bb8-4511-980b-553a332be219",
  "price": 23,
  "title": "Nice Product 5",
}
`;

exports[`Unit test for getAllProducts handler should return proper products 6`] = `
Object {
  "count": 8,
  "description": "Nice Product 6",
  "id": "00e95255-4243-426c-93e7-b9504a8bff89",
  "price": 15,
  "title": "Nice Product 6",
}
`;

exports[`Unit test for getAllProducts handler should return proper products 7`] = `
Object {
  "count": 2,
  "description": "Nice Product 7",
  "id": "c2f464aa-a291-435d-b465-f35c5466f19c",
  "price": 23,
  "title": "Nice Product 7",
}
`;

exports[`Unit test for getAllProducts handler should return proper products 8`] = `
Object {
  "count": 3,
  "description": "Nice Product 8",
  "id": "00345b0c-d0fb-4076-836b-b67c715f3a4e",
  "price": 15,
  "title": "Nice Product 8",
}
`;

exports[`Unit test for getAllProducts handler should return proper products 9`] = `
Object {
  "count": 59,
  "description": "Nice Product 9",
  "id": "8db0532c-6ca2-4abd-8619-e49f84571141",
  "price": 9,
  "title": "Nice Product 9",
}
`;

exports[`Unit test for getAllProducts handler should return proper products 10`] = `
Object {
  "count": 3,
  "description": "Nice Product 10",
  "id": "f0f4cccd-82a4-4fde-8586-a3a0df915fd6",
  "price": 123,
  "title": "Nice Product 10",
}
`;
